--- a/src/main/java/com/computerDatabase/excilys/i18n/translate_fr.properties
+++ b/src/main/java/com/computerDatabase/excilys/i18n/translate_fr.properties
@@ -1,12 +1,14 @@
-label.searchNumber=ordinateur(s) trouvé(s).
-label.searchInput=Tapez le nom
-label.searchFilter=Cherchez par nom
-label.addComputer=Ajouter un ordinateur
-label.deleteComputer=Supprimer
-label.view=Vue
-label.computerName=Nom d'ordinateur
-label.introducedDate=Date de commercialisation
-label.discontinuedDate=Date d'arrêt
-label.company=Fabricant
 label.add=Ajouter
+label.addComputer=Ajouter un ordinateur
 label.cancel=Annuler
+label.company=Fabricant
+label.computerName=Nom d'ordinateur
+label.deleteComputer=Supprimer
+label.discontinuedDate=Date d'arrêt
+label.edit=Modifier
+label.editComputer=Modifier un ordinateur
+label.introducedDate=Date de commercialisation
+label.searchFilter=Cherchez par nom
+label.searchInput=Tapez le nom
+label.searchNumber=ordinateur(s) trouvé(s).
+label.view=Vue
